<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".view.WeatherFragment">

    <FrameLayout
        android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/teal_700">
        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="@dimen/cardHeight"
                app:cardBackgroundColor="@color/gray_cc"
                app:cardCornerRadius="10dp" app:cardElevation="4dp" app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/mainHeaderTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                        android:text="@string/main" android:textAppearance="?android:attr/textAppearanceMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dateTimeTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="40dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/mainHeaderTextView"/>

                    <TextView
                        android:id="@+id/tempTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="32dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/dateTimeTextView"/>

                    <TextView
                        android:id="@+id/minMaxTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tempTextView"/>

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/minMaxTextView" />

                    <ImageView
                        android:id="@+id/tempImageView"
                        android:layout_width="@dimen/tempImageSize" android:layout_height="@dimen/tempImageSize"
                        android:layout_marginTop="64dp" android:layout_marginEnd="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/temperatureIcon" />

                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.82"
                        app:layout_constraintStart_toEndOf="@id/nameTextView"
                        app:layout_constraintTop_toBottomOf="@+id/tempImageView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="@dimen/cardHeight"
                app:cardBackgroundColor="@color/gray_cc"
                app:cardCornerRadius="10dp" app:cardElevation="4dp" app:cardUseCompatPadding="true">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/hourlyHeaderTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                        android:text="@string/hourly" android:textAppearance="?android:attr/textAppearanceMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/hourlyRecyclerView"
                        android:layout_width="match_parent" android:layout_height="0dp" android:orientation="horizontal"
                        android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hourlyHeaderTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="@dimen/cardHeight"
                app:cardBackgroundColor="@color/gray_cc"
                app:cardCornerRadius="10dp" app:cardElevation="4dp" app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/sunriseSunsetHeaderTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                        android:text="@string/sunriseSunset" android:textAppearance="?android:attr/textAppearanceMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.example.weather.customview.SunriseSunsetGraphView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/sunriseLabelTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/sunriseSunsetHeaderTextView" />

                    <TextView
                        android:id="@+id/sunriseTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginBottom="16dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/sunriseLabelTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginBottom="4dp"
                        android:text="@string/sunrise" android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintBottom_toTopOf="@id/sunriseTextView"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/sunsetTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp" android:layout_marginBottom="16dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/sunsetLabelTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp" android:layout_marginBottom="4dp"
                        android:text="@string/sunset" android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintBottom_toTopOf="@id/sunsetTextView"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="@dimen/cardHeight"
                app:cardBackgroundColor="@color/gray_cc"
                app:cardCornerRadius="10dp" app:cardElevation="4dp" app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/detailsHeaderTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/details" android:textAppearance="?android:attr/textAppearanceMedium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/windSpeedTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="16dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/detailsHeaderTextView" />

                    <TextView
                        android:id="@+id/cloudinessTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/windSpeedTextView" />

                    <TextView
                        android:id="@+id/humidityTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cloudinessTextView" />

                    <TextView
                        android:id="@+id/pressureTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/humidityTextView" />

                    <TextView
                        android:id="@+id/visibilityTextView"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pressureTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/waitingProgressBar"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center" android:visibility="gone"/>

    </FrameLayout>
</ScrollView>
